<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/american"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

<LinearLayout
    android:layout_width="0dp"
    android:layout_weight="1"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.practice.ayrash.courtcounterproject.MainActivity">

    <ImageView
        android:contentDescription="@string/new_york_giant"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="8dp"
        android:src="@drawable/nygiants"
        android:scaleType="fitXY"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_york_giant"
        android:textSize="20sp"
        android:textColor="#CDDC39"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textSize="56sp"
        android:textColor="@android:color/white"
        android:gravity="center_horizontal"
        android:id="@+id/newYorkGiantScore"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/plus_six"
        android:onClick="plusSixToNewYorkGiant"
        android:textColor="@android:color/white"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp">
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/plus_one"
            android:onClick="plusOneBonusToNewYorkGiant"
            android:textColor="@android:color/white"
            />
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/plus_two"
            android:onClick="plusTwoBonusToNewYorkGiant"
            android:textColor="@android:color/white"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/plus_three"
        android:onClick="plusThreeToNewYorkGiant"
        android:textColor="@android:color/white"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/plus_two_safety"
        android:onClick="plusTwoToNewYorkGiant"
        android:textColor="@android:color/white"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"/>


</LinearLayout>

<View
    android:layout_width="3dp"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:layout_marginTop="16dp"
    />


<LinearLayout
android:layout_width="0dp"
android:layout_weight="1"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context="com.practice.ayrash.courtcounterproject.MainActivity">

<ImageView
    android:contentDescription="@string/new_york_jets"
    android:layout_width="wrap_content"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:layout_margin="8dp"
    android:src="@drawable/newyorkjets"
    android:scaleType="fitXY"
    />
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/new_york_jets"
    android:textSize="20sp"
    android:fontFamily="sans-serif-condensed"
    android:textColor="#00FF00"
    android:gravity="center_horizontal"
    />
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/zero"
    android:textSize="56sp"
    android:textColor="@android:color/white"
    android:gravity="center_horizontal"
    android:id="@+id/newYorkJetScore"/>
<Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/plus_two_safety"
    android:onClick="plusSixToNewYorkJet"
    android:textColor="@android:color/white"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp">
    <Button
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/plus_one"
        android:onClick="plusOneBonusToNewYorkJet"
        android:textColor="@android:color/white"/>
    <Button
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/plus_two"
        android:onClick="plusTwoBonusToNewYorkJet"
        android:textColor="@android:color/white"/>
</LinearLayout>
<Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/plus_three"
    android:onClick="plusThreeToNewYorkJet"
    android:textColor="@android:color/white"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"/>
<Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/plus_two_safety"
    android:onClick="plusTwoToNewYorkJet"
    android:textColor="@android:color/white"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"
    android:layout_marginBottom="4dp"/>


</LinearLayout>
</LinearLayout>
<Button
   android:layout_width="wrap_content"
   android:layout_height="wrap_content"
   android:text="@string/reset"
   android:layout_alignParentBottom="true"
   android:layout_centerHorizontal="true"
   android:onClick="clearScore"
   android:textColor="@android:color/white"/>
</RelativeLayout>